@@ -1,3 +1,6 @@
+* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 6.9.0
+- Add AlmaLinux 8 support
+
 * Fri Jul 28 2023 Trey Dockendorf <tdockendorf@box.com> - 6.8.0
 - Support stdlib 9.x
 
